frontend/test/should_fail/array_var_exec.grg
using array_model_001b;

test td(var x:double, var y:double)
{
}

rule var {
	a:A;

	modify {
	---
		exec(td(array<string>["1","2"].var(), a.niceArray.var()));
	}
}
